profile edit added

--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -114,9 +114,61 @@
 
                                     <select class="form-control input-rounded " ng-model="profile.login_user.height">
                                         <option>Select</option>
-                                        <option value="170">5Ft 11In / 178 cm</option>
-                                        <option value="171">6Ft 0In / 180 cm</option>
-                                        <option value="172">5ft 0In / 150 cm</option>
+                                        <option ng-selected="profile.login_user.height == 137" value="137">137 cms</option>
+                                        <option ng-selected="profile.login_user.height == 138" value="138">138 cms</option>
+                                        <option ng-selected="profile.login_user.height == 139" value="139">139 cms</option>
+                                        <option ng-selected="profile.login_user.height == 140" value="140">140 cms</option>
+                                        <option ng-selected="profile.login_user.height == 141" value="141">141 cms</option>
+                                        <option ng-selected="profile.login_user.height == 142" value="142">142 cms</option>
+                                        <option ng-selected="profile.login_user.height == 143" value="143">143 cms</option>
+                                        <option ng-selected="profile.login_user.height == 144" value="144">144 cms</option>
+                                        <option ng-selected="profile.login_user.height == 145" value="145">145 cms</option>
+                                        <option ng-selected="profile.login_user.height == 146" value="146">146 cms</option>
+                                        <option ng-selected="profile.login_user.height == 147" value="147">147 cms</option>
+                                        <option ng-selected="profile.login_user.height == 148" value="148">148 cms</option>
+                                        <option ng-selected="profile.login_user.height == 149" value="149">149 cms</option>
+                                        <option ng-selected="profile.login_user.height == 150" value="150">150 cms</option>
+                                        <option ng-selected="profile.login_user.height == 151" value="151">151 cms</option>
+                                        <option ng-selected="profile.login_user.height == 152" value="152">152 cms</option>
+                                        <option ng-selected="profile.login_user.height == 153" value="153">153 cms</option>
+                                        <option ng-selected="profile.login_user.height == 154" value="154">154 cms</option>
+                                        <option ng-selected="profile.login_user.height == 155" value="155">155 cms</option>
+                                        <option ng-selected="profile.login_user.height == 156" value="156">156 cms</option>
+                                        <option ng-selected="profile.login_user.height == 157" value="157">157 cms</option>
+                                        <option ng-selected="profile.login_user.height == 158" value="158">158 cms</option>
+                                        <option ng-selected="profile.login_user.height == 159" value="159">159 cms</option>
+                                        <option ng-selected="profile.login_user.height == 160" value="160">160 cms</option>
+                                        <option ng-selected="profile.login_user.height == 161" value="161">161 cms</option>
+                                        <option ng-selected="profile.login_user.height == 162" value="162">162 cms</option>
+                                        <option ng-selected="profile.login_user.height == 163" value="163">163 cms</option>
+                                        <option ng-selected="profile.login_user.height == 164" value="164">164 cms</option>
+                                        <option ng-selected="profile.login_user.height == 165" value="165">165 cms</option>
+                                        <option ng-selected="profile.login_user.height == 166" value="166">166 cms</option>
+                                        <option ng-selected="profile.login_user.height == 167" value="167">167 cms</option>
+                                        <option ng-selected="profile.login_user.height == 168" value="168">168 cms</option>
+                                        <option ng-selected="profile.login_user.height == 169" value="169">169 cms</option>
+                                        <option ng-selected="profile.login_user.height == 170" value="170">170 cms</option>
+                                        <option ng-selected="profile.login_user.height == 171" value="171">171 cms</option>
+                                        <option ng-selected="profile.login_user.height == 172" value="172">172 cms</option>
+                                        <option ng-selected="profile.login_user.height == 173" value="173">173 cms</option>
+                                        <option ng-selected="profile.login_user.height == 174" value="174">174 cms</option>
+                                        <option ng-selected="profile.login_user.height == 175" value="175">175 cms</option>
+                                        <option ng-selected="profile.login_user.height == 176" value="176">176 cms</option>
+                                        <option ng-selected="profile.login_user.height == 177" value="177">177 cms</option>
+                                        <option ng-selected="profile.login_user.height == 178" value="178">178 cms</option>
+                                        <option ng-selected="profile.login_user.height == 179" value="179">179 cms</option>
+                                        <option ng-selected="profile.login_user.height == 180" value="180">180 cms</option>
+                                        <option ng-selected="profile.login_user.height == 181" value="181">181 cms</option>
+                                        <option ng-selected="profile.login_user.height == 182" value="182">182 cms</option>
+                                        <option ng-selected="profile.login_user.height == 183" value="183">183 cms</option>
+                                        <option ng-selected="profile.login_user.height == 184" value="184">184 cms</option>
+                                        <option ng-selected="profile.login_user.height == 185" value="185">185 cms</option>
+                                        <option ng-selected="profile.login_user.height == 186" value="186">186 cms</option>
+                                        <option ng-selected="profile.login_user.height == 187" value="187">187 cms</option>
+                                        <option ng-selected="profile.login_user.height == 188" value="188">188 cms</option>
+                                        <option ng-selected="profile.login_user.height == 189" value="189">189 cms</option>
+                                        <option ng-selected="profile.login_user.height == 190" value="190">190 cms</option>
+
 
                                     </select>
                                 </div>
@@ -125,12 +177,47 @@
                                     <label class=" uppercase font-weight  "> Weight</label>
 
                                     <select class="form-control input-rounded " ng-model="profile.login_user.weight">
-                                        <option>Select</option>
-                                        <option value="50">50Kg 115 Lbs</option>
-                                        <option value="60">60Kg /135 Lbs</option>
-                                        <option value="70">70Kg / 155 Lbs</option>
-                                        <option value="75">75Kg / 175 Lbs</option>
-                                        <option value="80">80Kg / 175 Lbs</option>
+                                        <option >Select</option>
+                                        <option ng-selected="profile.login_user.weight == 40" value=40>40 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 41" value="41">41 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 42" value="42">42 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 43" value="43">43 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 44" value="44">44 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 45" value="45">45 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 46" value="46">46 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 47" value="47">47 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 48" value="48">48 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 49" value="49">49 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 50" value="50">50 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 51" value="51">51 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 52" value="52">52 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 53" value="53">53 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 54" value="54">54 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 55" value="55">55 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 56" value="56">56 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 57" value="57">57 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 58" value="58">58 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 59" value="59">59 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 60" value="60">60 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 61" value="61">61 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 62" value="62">62 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 63" value="63">63 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 64" value="64">64 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 65" value="65">65 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 66" value="66">66 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 67" value="67">67 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 68" value="68">68 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 69" value="69">69 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 70" value="70">70 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 71" value="71">71 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 72" value="72">72 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 73" value="73">73 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 74" value="74">74 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 75" value="75">75 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 76" value="76">76 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 77" value="77">77 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 78" value="78">78 kgs</option>
+                                        <option ng-selected="profile.login_user.weight == 79" value="79">79 kgs</option>
 
 
                                     </select>
@@ -183,9 +270,8 @@
                                     <label class=" uppercase font-weight  "> Mother toungue</label>
 
                                     <select class="form-control input-rounded "
-                                            ng-model="profile.login_user.id_mothertongue"
-                                            ng-click="selectMothertongue(profile.login_user.id_mothertongue)">
-                                        <option ng-repeat="obj in motherTongueList" value="{{obj}}">
+                                            ng-model="profile.login_user.id_mothertongue">
+                                        <option ng-repeat="obj in motherTongueList" ng-selected="obj.id_mothertongue == profile.login_user.id_mothertongue" value="{{obj.id_mothertongue}}">
                                             {{obj.mothertongue}}
                                         </option>
                                     </select>
