--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -26,7 +26,7 @@
                                                         <span class="menu-option"><a style="color: red" ui-sref="managephoto">Add more Photo</a></span>
                                                     </div>
                                                     <div class="col-md-12">
-                                                        <span class="menu-option">Edit Profile</span>
+                                                        <span class="menu-option"><a style="color: red" ui-sref="profile">Edit Profile</a></span>
                                                     </div>
                                                     <div class="col-md-12">
                                                         <span class="menu-option">Edit partner preference</span>
