--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -3,84 +3,133 @@
 
         <div class="form-group margin-top-40">
             <label class=" uppercase font-weight"> Maritial Status</label>
-            <select class="form-control input-rounded"><!--ng-model="candidate.maritalStatus"-->
+            <select class="form-control input-rounded "
+                    ng-model="step2.marital_status">
                 <option>Select</option>
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
-                <option>Option 4</option>
-                <option>Option 5</option>
+                <option value="unmarried">Never Married</option>
+                <option value="married"> Married</option>
+                <option value="divorced">Divorced</option>
+                <option value="widow">Widow</option>
+                <option value="widower">widower</option>
+
             </select>
         </div>
 
-  <div class="form-group ">
+        <!--<div class="form-group ">-->
+            <!--<label class=" uppercase font-weight  "> Mother toungue</label>-->
+
+            <!--<select class="form-control input-rounded "-->
+                    <!--ng-model="step2.mothertongue">-->
+                <!--<option ng-repeat="obj in motherTongueList"  value="{{obj.id_mothertongue}}">-->
+                    <!--{{obj.mothertongue}}-->
+                <!--</option>-->
+            <!--</select>-->
+        <!--</div>-->
+        <div class="form-group ">
             <label class=" uppercase font-weight"> Cast</label>
-            <select class="form-control input-rounded"><!--ng-model="candidate.cast"-->
-                <option>Select</option>
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
-                <option>Option 4</option>
-                <option>Option 5</option>
+            <select placegolder="Select"class="form-control input-rounded " ng-model="step2.caste"
+                       >
+                <option ng-repeat="obj in castList" value="{{obj.id_caste}}">{{obj.caste}}</option>
+
             </select>
         </div>
 
 
-  <div class="form-group ">
+        <div class="form-group ">
             <label class=" uppercase font-weight"> Country Living In</label>
-            <select class="form-control input-rounded" ><!--ng-model="candidate.country"-->
-                <option>Select</option>
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
-                <option>Option 4</option>
-                <option>Option 5</option>
+            <select class="form-control input-rounded " ng-model="step2.country"
+                    ng-click="selectCountry()">
+                <option ng-repeat="obj in countryList" value="{{obj.id_country}}">{{obj.country_name}}
+                </option>
             </select>
         </div>
 
 
-  <div class="form-group ">
+        <div class="form-group ">
             <label class=" uppercase font-weight"> State Living In</label>
-            <select class="form-control input-rounded" ><!--ng-model="candidate.state"-->
-                <option>Select</option>
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
-                <option>Option 4</option>
-                <option>Option 5</option>
+            <select class="form-control input-rounded " ng-model="step2.state"
+                    ng-click="selectState()">
+                <option ng-repeat="obj in stateList" value="{{obj.id_state}}">{{obj.state_name}}</option>
             </select>
         </div>
 
 
-  <div class="form-group ">
+        <div class="form-group ">
             <label class=" uppercase font-weight"> City Living In</label>
-            <select class="form-control input-rounded" ><!--ng-model="candidate.city"-->
-                <option>Select</option>
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
-                <option>Option 4</option>
-                <option>Option 5</option>
+            <select class="form-control input-rounded " ng-model="step2.city"
+                    ng-click="selectCity(city)">
+                <option ng-repeat="obj in cityList" value="{{obj.id_city}}">{{obj.city_name}}</option>
             </select>
         </div>
 
 
-  <div class="form-group ">
+        <div class="form-group ">
             <label class=" uppercase font-weight"> Height</label>
-            <select class="form-control input-rounded" ><!--ng-model="candidate.height"-->
+            <select class="form-control input-rounded " ng-model="step2.height">
                 <option>Select</option>
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
-                <option>Option 4</option>
-                <option>Option 5</option>
+                <option  value="137">137 cms</option>
+                <option  value="138">138 cms</option>
+                <option  value="139">139 cms</option>
+                <option  value="140">140 cms</option>
+                <option  value="141">141 cms</option>
+                <option  value="142">142 cms</option>
+                <option  value="143">143 cms</option>
+                <option  value="144">144 cms</option>
+                <option  value="145">145 cms</option>
+                <option  value="146">146 cms</option>
+                <option  value="147">147 cms</option>
+                <option  value="148">148 cms</option>
+                <option  value="149">149 cms</option>
+                <option  value="150">150 cms</option>
+                <option  value="151">151 cms</option>
+                <option  value="152">152 cms</option>
+                <option  value="153">153 cms</option>
+                <option  value="154">154 cms</option>
+                <option  value="155">155 cms</option>
+                <option  value="156">156 cms</option>
+                <option  value="157">157 cms</option>
+                <option  value="158">158 cms</option>
+                <option  value="159">159 cms</option>
+                <option  value="160">160 cms</option>
+                <option  value="161">161 cms</option>
+                <option  value="162">162 cms</option>
+                <option  value="163">163 cms</option>
+                <option  value="164">164 cms</option>
+                <option  value="165">165 cms</option>
+                <option  value="166">166 cms</option>
+                <option  value="167">167 cms</option>
+                <option  value="168">168 cms</option>
+                <option  value="169">169 cms</option>
+                <option  value="170">170 cms</option>
+                <option  value="171">171 cms</option>
+                <option  value="172">172 cms</option>
+                <option  value="173">173 cms</option>
+                <option  value="174">174 cms</option>
+                <option  value="175">175 cms</option>
+                <option  value="176">176 cms</option>
+                <option  value="177">177 cms</option>
+                <option  value="178">178 cms</option>
+                <option  value="179">179 cms</option>
+                <option  value="180">180 cms</option>
+                <option  value="181">181 cms</option>
+                <option  value="182">182 cms</option>
+                <option  value="183">183 cms</option>
+                <option  value="184">184 cms</option>
+                <option  value="185">185 cms</option>
+                <option  value="186">186 cms</option>
+                <option  value="187">187 cms</option>
+                <option  value="188">188 cms</option>
+                <option  value="189">189 cms</option>
+                <option  value="190">190 cms</option>
+
+
             </select>
         </div>
 
 
-  <div class="form-group ">
+        <div class="form-group ">
             <label class=" uppercase font-weight"> Highest Education</label>
-            <select class="form-control input-rounded" ><!--ng-model="candidate.highestEducation"-->
+            <select class="form-control input-rounded"><!--ng-model="candidate.highestEducation"-->
                 <option>Select</option>
                 <option>Option 1</option>
                 <option>Option 2</option>
@@ -91,9 +140,9 @@
         </div>
 
 
-  <div class="form-group ">
+        <div class="form-group ">
             <label class=" uppercase font-weight"> Occupation</label>
-            <select class="form-control input-rounded" ><!--ng-model="candidate.occupation"-->
+            <select class="form-control input-rounded"><!--ng-model="candidate.occupation"-->
                 <option>Select</option>
                 <option>Option 1</option>
                 <option>Option 2</option>
@@ -106,7 +155,8 @@
         <div class="form-group ">
 
             <div class="col-md-offset-2 col-md-8">
-                <button type="button" class=" center-block col-md-12 btn red input-rounded" ng-click="vm.registerCandidate()">
+                <button type="button" class=" center-block col-md-12 btn red input-rounded"
+                        ng-click="vm.registerCandidateStep2()">
                     Complete Registration
                 </button>
             </div>
