profile edit added

--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -146,10 +146,10 @@
                             </div>
                             <div class=" row vp-main-action" ng-if="mainlink !='shortlisted'">
                                 <div style="text-transform: uppercase;text-align: center;">
-                                    <button class="col-md-3"
+                                    <div class="col-md-3"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer" ng-click="shortlist(item.id_people)"><i
                                             class="fa fa-star-o"></i> Shortlist
-                                    </button>
+                                    </div>
                                     <div class="col-md-3"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
                                         <i class="fa fa-phone"></i> Call now
@@ -158,10 +158,10 @@
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
                                             class="fa fa-commenting-o"></i> Chat now
                                     </div>
-                                    <button class="col-md-3" ng-click="sendInterest(item.id_people)"
+                                    <div class="col-md-3" ng-click="sendInterest(item.id_people)"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
                                             class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
-                                    </button>
+                                    </div>
 
                                 </div>
                             </div>
