profile edit updated

--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -448,7 +448,7 @@
                                 <div class="col-md-4">
                                     <label class=" font-weight-head  "> Citizenship</label>
 
-                                    <p class="details "></p>
+                                    <p class="details ">{{setLocation.nationality_name}}</p>
 
                                 </div>
 
