profile edit updated

--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -419,6 +419,23 @@
                                 </div>
 
                             </div>
+                                 <hr>
+
+                            <div class="form-group">
+                                <div class="col-md-6"></div>
+
+                                <div class="col-md-3 col-md-offset-3 " style="padding-left:5.2%">
+                                    <button type="button" class=" btn btn-default input-rounded " ng-click="">
+                                        Cancel
+                                    </button>
+                                    &nbsp;
+                                    <button type="button" ng-click="saveLocation()" class=" btn btn-default red input-rounded "
+                                            style="color:#ffffea" ng-click="">
+                                        Save
+                                    </button>
+
+                                </div>
+                            </div>
                                 </span>
                             <span ng-show="location">
 
@@ -453,23 +470,7 @@
                                 </div>
 
                             </div>
-                                <hr>
 
-                            <div class="form-group">
-                                <div class="col-md-6"></div>
-
-                                <div class="col-md-3 col-md-offset-3 " style="padding-left:5.2%">
-                                    <button type="button" class=" btn btn-default input-rounded " ng-click="">
-                                        Cancel
-                                    </button>
-                                    &nbsp;
-                                    <button type="button" ng-click="basic()" class=" btn btn-default red input-rounded "
-                                            style="color:#ffffea" ng-click="">
-                                        Save
-                                    </button>
-
-                                </div>
-                            </div>
                                 </span>
                         </div>
                     </div>
