reg edit updated

--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -127,30 +127,26 @@
         </div>
 
 
-        <div class="form-group ">
-            <label class=" uppercase font-weight"> Highest Education</label>
-            <select class="form-control input-rounded"><!--ng-model="candidate.highestEducation"-->
-                <option>Select</option>
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
-                <option>Option 4</option>
-                <option>Option 5</option>
-            </select>
-        </div>
+        <!--<div class="form-group ">-->
+            <!--<label class=" uppercase font-weight"> Highest Education</label>-->
+            <!--<select class="form-control input-rounded " ng-model="step2.city"-->
+                    <!--ng-click="selectCity(city)">-->
+                <!--<option ng-repeat="obj in educationCategoryList" value="{{obj.id_city}}">{{obj.city_name}}</option>-->
+            <!--</select>-->
+        <!--</div>-->
 
 
-        <div class="form-group ">
-            <label class=" uppercase font-weight"> Occupation</label>
-            <select class="form-control input-rounded"><!--ng-model="candidate.occupation"-->
-                <option>Select</option>
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
-                <option>Option 4</option>
-                <option>Option 5</option>
-            </select>
-        </div>
+        <!--<div class="form-group ">-->
+            <!--<label class=" uppercase font-weight"> Occupation</label>-->
+            <!--<select class="form-control input-rounded">&lt;!&ndash;ng-model="candidate.occupation"&ndash;&gt;-->
+                <!--<option>Select</option>-->
+                <!--<option>Option 1</option>-->
+                <!--<option>Option 2</option>-->
+                <!--<option>Option 3</option>-->
+                <!--<option>Option 4</option>-->
+                <!--<option>Option 5</option>-->
+            <!--</select>-->
+        <!--</div>-->
 
         <div class="form-group ">
 
